add wagger tags to recipes controller
